--- a/frontend/src/Components/Hero/Hero.css
+++ b/frontend/src/Components/Hero/Hero.css
@@ -45,7 +45,15 @@
     height: 70px;
     border-radius: 75px;
     margin-top: 30px;
-    background-color: white;
+    background-color: #ff4141;
+    color: white;
     font-size: 22px;
     font-weight: 500;
+}
+
+.hero-right{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
